# Codesense

./: .env.example  .gitignore  .pre-commit-hooks.yaml  DEPLOYMENT_CHECKLIST.md  README.md  docker-compose.yml  ruff.toml  vercel.json
.github/workflows/: lint-and-test.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  dependencies.py  router.py  scan.py
backend/app/core/: __init__.py  config.py  logging.py
backend/app/models/: __init__.py
backend/app/schemas/: __init__.py  scan.py
backend/app/services/: __init__.py
backend/app/utils/: __init__.py
backend/tests/: test_app.py  test_scan.py
datasets/: README.md  features.csv
datasets/ai/: ai_sample_0000.py  ai_sample_0001.py  ai_sample_0002.py  ai_sample_0003.py  ai_sample_0004.py  ai_sample_0005.py  ai_sample_0006.py  ai_sample_0007.py  ai_sample_0008.py  ai_sample_0009.py  ai_sample_0010.py  ai_sample_0011.py  ai_sample_0012.py  ai_sample_0013.py  ai_sample_0014.py  ai_sample_0015.py  ai_sample_0016.py  ai_sample_0017.py  ai_sample_0018.py  ai_sample_0019.py  ai_sample_0020.py  ai_sample_0021.py  ai_sample_0022.py  ai_sample_0023.py  ai_sample_0024.py  ai_sample_0025.py  ai_sample_0026.py  ai_sample_0027.py  ai_sample_0028.py  ai_sample_0029.py  ai_sample_0030.py  ai_sample_0031.py  ai_sample_0032.py  ai_sample_0033.py  ai_sample_0034.py  ai_sample_0035.py  ai_sample_0036.py  ai_sample_0037.py  ai_sample_0038.py  ai_sample_0039.py  (+1944 more)
datasets/human/: metadata.json
docker/: README.md
docs/: api.md  architecture.md  ml_pipeline.md  roadmap.md
frontend/: .env.example  .prettierignore  ANIMATIONS.md  Dockerfile  eslint.config.mjs  next-env.d.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/landing/: animations-showcase.tsx  landing-page.tsx
frontend/components/providers/: theme-provider.tsx
frontend/components/ui/: README.md  analysis-progress-bar.tsx  animated-badge.tsx  animated-button.tsx  animated-card.tsx  animated-container.tsx  animated-loader.tsx  animated-text.tsx  badge.tsx  button.tsx  chart-container.tsx  empty-state.tsx  evidence-card.tsx  index.ts  loading-skeleton.tsx  metric-card.tsx  (+3 more)
frontend/config/: README.md
frontend/lib/: animations.ts  design-tokens.ts  monaco-theme.ts  types.ts
ml/: README.md  cli.py  pyproject.toml
ml/datasets/: __init__.py
ml/datasets/builder/: __init__.py  config.py  models.py  pipeline.py
ml/datasets/builder/stages/: clone.py  dedup.py  export.py  filter.py  hasher.py  manifest.py  scan.py
ml/evaluation/: __init__.py
ml/feature_extractors/: __init__.py  extractor.py
ml/inference/: __init__.py  main.py  predictor.py  schemas.py
ml/models/: codesense_xgb.json  model_meta.json
ml/tests/: test_vulnerability_scanner.py
ml/training/: __init__.py
ml/vulnerability/: __init__.py  scanner.py
models/: README.md
scripts/: README.md  build_dataset.py  codesense_cli.py  download_ai_samples.py  extract_features.py  train_model.py
tests/: README.md  test_dataset_builder.py
(+2 files in other folders)
