[project]
name = "codesense-backend"
version = "0.1.0"
description = "FastAPI service for CodeSense AI-authorship analysis."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi[standard]>=0.115.6",
  "pydantic-settings>=2.7.0",
  "structlog>=24.4.0",
  "shap>=0.52.0",
  "xgboost>=3.3.0",
  "radon>=6.0.1",
  "numpy>=1.26.0",
  "scikit-learn>=1.5.0",
  "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.4",
  "pytest-asyncio>=0.25.0",
  "ruff>=0.8.4"
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff.lint.isort]
  known-first-party = ["app", "ml"]
  known-third-party = ["fastapi", "pydantic", "pytest", "structlog", "xgboost", "numpy", "sklearn", "radon", "uvicorn"]
