[project]
name = "codesense-ml"
version = "0.1.0"
description = "Independent ML module scaffold for CodeSense."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
  "pytest>=8.3.4",
  "ruff>=0.8.4"
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["feature_extractors", "training", "inference", "datasets", "evaluation"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
