[project]
name = "codesense-ml"
version = "0.1.0"
description = "Independent ML module scaffold for CodeSense."
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "datasets>=5.0.0",
    "fastapi>=0.138.2",
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "radon>=6.0.1",
    "rich>=15.0.0",
    "scikit-learn>=1.9.0",
    "shap==0.52.0",
    "typer>=0.25.1",
    "uvicorn[standard]>=0.49.0",
    "xgboost>=3.3.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.4",
  "ruff>=0.8.4"
]

[project.scripts]
codesense = "cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["cli"]
packages = ["feature_extractors", "inference", "vulnerability"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["feature_extractors", "training", "inference", "datasets", "evaluation"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
